--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffe57bd0;
+  background-image: url("./pineapple-cut.png")
 }
 
 code {
