--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ffe57bd0;
+  background-color: #ffe57b;
   background-image: url("./pineapple-cut.png")
 }
 
